// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error component should render with a stack trace when passed 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        Something has gone wrong
      </span>
      An error has occurred
    </h1>
    <details
      class="govuk-details"
      open=""
    >
      <summary
        class="govuk-details__summary"
      >
        <span
          class="govuk-details__summary-text"
        >
          Stack trace
        </span>
      </summary>
      <div
        class="govuk-details__text"
      >
        <pre
          class="code overflow-scroll"
        >
          Stack trace...
        </pre>
      </div>
    </details>
  </div>
</div>
`;

exports[`Error component should render with default props 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        Something has gone wrong
      </span>
      An error has occurred
    </h1>
  </div>
</div>
`;

exports[`Error component should render with location when 403 passed 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        Something has gone wrong
      </span>
      An error has occurred
    </h1>
    <p>
      <code>
        /SOME/UNSUPPORTED/ENDPOINT
      </code>
    </p>
  </div>
</div>
`;

exports[`Error component should render with location when 404 passed 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        Something has gone wrong
      </span>
      An error has occurred
    </h1>
    <p>
      <code>
        /SOME/UNSUPPORTED/ENDPOINT
      </code>
    </p>
  </div>
</div>
`;

exports[`Error component should render with location when passed 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        Something has gone wrong
      </span>
      An error has occurred
    </h1>
  </div>
</div>
`;
